# poengsum

./: Cargo.toml  README.md  poengsum.txt
src/: call.rs  error.rs  flag.rs  main.rs  record.rs  run.rs  score.rs  style.rs  terminal.rs
src/error/: arg_error.rs  error_msg.rs  expected_arg.rs  insufficient_data.rs  invalid_arg.rs  invalid_call.rs  invalid_flag.rs  invalid_io.rs  invalid_read.rs  invalid_syntax.rs  mod.rs  msg.rs
src/flag/: flag_kind.rs  flag_option.rs  mod.rs
src/help/: arg_usage.rs  call_example.rs  docs.rs  example.rs  flag_example.rs  flag_help.rs  flag_usage.rs  flags_examples.rs  flags_usages.rs  line_example.rs  mod.rs  rules.rs
src/record/: mod.rs  record.rs  record_parser.rs  records.rs
src/round/: bounded_round.rs  bounded_rounds.rs  mod.rs  round.rs  rounds.rs  some_rounds.rs
