[package]
name = "poengsum"
version = "0.1.1"
authors = ["Sigurd Sætherø Spangelo"]
edition = "2024"
license = "MIT"
description = "A very simple CLI tool that counts points and keeps track of teams competing in a quiz."
repository = "https://github.com/sigurd4/poengsum"
keywords = ["game", "quiz", "utility", "cli", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
thiserror = "2.0.12"
moddef = "0.2.6"
colored = "3.0.0"