[package]
name = "poengsum"
version = "0.2.2"
authors = ["Sigurd Sætherø Spangelo"]
edition = "2024"
license = "MIT"
description = "CLI-application for generating quiz leaderboards in the terminal."
repository = "https://github.com/sigurd4/poengsum"
keywords = ["game", "quiz", "utility", "cli", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
thiserror = "2.0.12"
moddef = "0.3.0"
ansi_term = "0.12.1"
supports-unicode = "3.0.0"